--- a/root/css/style.css
+++ b/root/css/style.css
@@ -20,10 +20,25 @@ ul {
     list-style: none;
 }
 
+
+/* elementos del body */
+body{
+    background-size: auto;
+    /* background: linear-gradient(45deg, rgb(107, 106, 106), rgb(181, 173, 186),rgb(177, 138, 138)); */
+    animation: bg-animate 3s ease-in-out infinite;
+}
+
+@keyframes bg-animate{
+    0%{background: linear-gradient(45deg, rgb(107, 106, 106), rgb(181, 173, 186),rgb(177, 138, 138));}
+    50%{background: linear-gradient(90deg, rgb(107, 106, 106), rgb(181, 173, 186),rgb(177, 138, 138));}
+    100%{background: linear-gradient(135deg, rgb(107, 106, 106), rgb(181, 173, 186),rgb(177, 138, 138));}
+}
+
+
 /* elementos de header/nav */
 
 header{
-    background-color: rgba(173, 216, 230, 0.6);
+    background-color: rgba(173, 216, 230, 0.8);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -62,8 +77,21 @@ header{
 .menuItemLink {
     font-size: 3rem;
     color: black;
+    border: 1px solid black;
+    padding: 1.5px;
 }
 
+.menu a:hover{
+    animation: menu-animacion 0.3s ease-out forwards;
+}
+
+@keyframes menu-animacion{
+    0%{}
+    100%{border-radius: 15px;
+        background-color: white;
+        padding: 6px;
+    }
+}
 /* .menuSub {
 
 } */
@@ -80,7 +108,7 @@ footer{
 }
 
     footer h2{
-        font-size: 3rem;
+        font-size: 3.5rem;
         margin: 0;
     }
 
@@ -94,6 +122,17 @@ footer{
         footer ul li{
             list-style: none;
         }
+            footer ul li a img:hover{
+                filter: blur(1px);
+                animation: icon-animate 0.2s ease-out forwards;
+            }
+
+@keyframes icon-animate{
+    0%{transform: rotate(90deg);}
+    25%{transform: rotate(180deg);}
+    50%{transform: rotate(270deg);}
+    100%{transform: rotate(360deg);}
+}
 
 /* elemento de contactoMain grid */
 
@@ -114,12 +153,12 @@ footer{
 }
 
 .contactoDatos h1{
-    font-size: 3rem;
+    font-size: 4rem;
     margin: 0;
 }
 
 .contactoDatos h2{
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin: 0;
 }
 
@@ -130,12 +169,12 @@ footer{
 }
 
 .contactoFormulario h1 {
-    font-size: 3rem;
+    font-size: 4rem;
 }
 
 .contactoFormulario label {
     margin: 0%;
-    font-size: 2rem;
+    font-size: 4rem;
 }
 
 .contactoMapa{
@@ -172,9 +211,10 @@ footer{
 .indexBienvenida {
     text-align: left;
     /* width: 50%; */
+    height: auto;
     border: 3px black solid;
     padding: 0 10px;
-    background-color: rgba(173, 216, 230, 0.6);
+    background-color: rgba(195, 225, 235, 0.6);
     grid-area: 1 / 1 / 2 / 2;
 }
 
@@ -185,12 +225,12 @@ footer{
 
 
 .indexBienvenida p{
-    font-size: 2rem;
+    font-size: 2.8rem;
     margin: 5px;
 }
 
 .indexBienvenida h2{
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin: 0;
 }
 
@@ -200,14 +240,15 @@ footer{
     border: solid black 2px;
     text-align: center;
     grid-area: 1 / 3 / 2 / 4;
+    background-color: rgba(195, 225, 235, 0.6);
 }
 
 .indexDatos h2 {
-    font-size: 3rem;
+    font-size: 3.5rem;
 }
 
 .indexDatos h3 {
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 
@@ -232,6 +273,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-around;
     border: 4px black solid;
+    background-color: rgba(195, 225, 235, 0.6);
 }
 
 .indexServicios {
@@ -253,6 +295,7 @@ footer{
     justify-content: center;
     font-size: 2rem;
     gap: 40px;
+    background-color: rgba(195, 225, 235, 0.6);
 }
 .indexServicios h2{
     text-align: center;
