--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -5,9 +5,9 @@
     div {
 
         h1 {
-            font-size: 6rem;
-            text-align: center;
-            background-color: rgba(195, 225, 235, 0.6);
+            font-size: $text-6;
+            text-align: $space-center;
+            background-color: $color-main;
             border-radius: 20px;
         }
     }
@@ -19,7 +19,7 @@
     margin-top: 2px;
     padding: 10px 20px;
     border: solid black 3px;
-    background-color: rgba(195, 225, 235, 0.6);
+    background-color: $color-main;
 
     section {
 
@@ -30,21 +30,21 @@
         }
 
         h1 {
-            font-size: 5rem;
-            text-align: center;
+            font-size: $text-5;
+            text-align: $space-center;
             text-decoration: underline;
         }
 
         h2 {
             font-family: 'Montserrat', sans-serif;
             text-decoration: underline;
-            font-size: 4rem;
+            font-size: $text-4;
         }
 
         ul {
 
             li{
-                font-size: 3rem;
+                font-size: $text-3;
             }
         }
     }
@@ -54,12 +54,12 @@
 /* NOSOTROS PERFIL */
 
 .nosotrosPerfil {
-    background-color: rgba(195, 225, 235, 0.6);
-    padding-bottom: 5rem;
+    background-color: $color-main;
+    padding-bottom: $text-5;
 
     h2 {
-        text-align: center;
-        font-size: 5rem;
+        text-align: $space-center;
+        font-size: $text-5;
     }
 }
 
@@ -75,7 +75,7 @@
         div {
 
             h5 {
-                font-size: 4rem;
+                font-size: $text-4;
             }
 
             p {
@@ -86,14 +86,14 @@
         ul {
 
             li {
-                font-size: 3rem;
+                font-size: $text-3;
             }
         }
 
         div {
 
             a {
-                font-size: 3rem;
+                font-size: $text-3;
             }
         }
     }
