--- a/scss/_sitios.scss
+++ b/scss/_sitios.scss
@@ -5,10 +5,7 @@
     div {
 
         h1 {
-            font-size: $text-6;
-            text-align: $space-center;
-            background-color: $color-main;
-            border-radius: 20px;
+            @include title-h1
         }
     }
 }
