--- a/scss/_navBarHeader.scss
+++ b/scss/_navBarHeader.scss
@@ -1,6 +1,8 @@
 #navBar {
-    /* background-color: rgba(189, 33, 33, 0.2); */
     background-color: $color-main;
+    @media screen and (max-width:991px) {
+        background-color: rgba(173, 216, 230, 0.8);
+    }
 
     a {
         font-size: $text-3;
@@ -13,7 +15,6 @@
     li {
 
         ul {
-            /* background-color: rgba(195, 225, 235, 0.6); */
             background-color: $color-main;
         }
     }
@@ -21,6 +22,7 @@
 }
 
 /* animación version principal */
+
 #navBar li :hover{
     animation: menu-animacion 0.3s ease-out forwards;
 }
@@ -39,11 +41,7 @@
 
 
 
-
-
-
-
-
+/* animación botones navbar */
 
 @keyframes menu-animacion{
     0%{}
@@ -53,6 +51,7 @@
     }
 }
 
+/* tamaño del botón hamburguesa */
 
 .navbar-toggler-icon {
     width: 85px;
