--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -53,7 +53,7 @@ $textPos:(
 
 // mixin //
 
-// uso tipo clase pero sin tener que el html
+// uso tipo clase pero sin tener que tocar el html
 @mixin title-h1 {
     font-size: map-get($map: $textSize, $key: '6');
     text-align: $space-center;
